--- a/style.css
+++ b/style.css
@@ -1,26 +1,4 @@
-html {
-    background-color: #d1f7ff;
-    font-size: 20px;
-}
-h1 {
-    text-align: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #05d9e8;
-    border: #ff2a6f 3px solid;
-    background-color: black;
-    margin: 5px;
-}
 
-a.navlink{
-    color: blue;
-    border: #ff2a6f solid 2px;
-}
-
-a.navfis{
-    color: blue;
-    border: #ff2a6f solid 2px;
-}
-a.navquim{
-    color: blue;
-    border: #ff2a6f solid 2px;
+.container-fluid{
+    background-color:#e3f2fd;
 }
