--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
-.container-fluid{
-    background-color:#e3f2fd;
+.ajustar{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.eskeler{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 15%;
+}
+p {
+    text-align: center;
 }
