--- a/style.css
+++ b/style.css
@@ -10,6 +10,18 @@
     justify-content: space-around;
     margin-top: 15%;
 }
+
+.bienvenida{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 0%;
+}
+
+.ajustar:hover .eskeler{
+    transform: translateY(100%);
+}
+
 p {
     text-align: center;
 }
