--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     justify-content: space-around;
     position: relative;
     animation-name: myanimation;
-    animation-duration: 4s;
+    animation-duration: 1s;
     animation-iteration-count: 1;
 }
 
@@ -31,6 +31,18 @@
     flex-wrap: wrap;
     justify-content: space-around;
     margin-top: 0%;
+}
+        
+.responsive {
+    width: 78%;
+    height: auto;
+}
+
+.image {
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 p {
